# Image-Redactor

projects/image_processor/: BMP.cpp  BMP.h  CMakeLists.txt  crop_filter.cpp  edge_detection_filter.cpp  edge_detection_filter.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  hexagonal_pixel.h  image.cpp  image.h  image_processor.cpp  matrix.cpp  negative_filter.h  pixel.h  sharpening_filter.cpp  sharpening_filter.h  test.cpp  test.h
projects/image_processor/test/: CMakeLists.txt
